🐞 Ajuste de url | santosqa.com

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <footer>
       <p id="space">
         <br />
-        Feito com <img src="../assets/heart.svg" alt="imagem de coração" /> por
+        Feito com <img src="./assets/heart.svg" alt="imagem de coração" /> por
         <a href="https://santosqa.com" target="_blank" rel="noopener noreferrer" aria-label="site Santos QA">
           @santosqa_
         </a>
