--- a/pages/santos-locais-turisticos.html
+++ b/pages/santos-locais-turisticos.html
@@ -17,8 +17,8 @@
 
   <title>Santos Locais Turisticos</title>
 
-  <link rel="icon" type="image/png" href="/assets/img-praia-grande.png" />
-  <link rel="stylesheet" href="/css/style-santos-locais-turisticos.css" />
+  <link rel="icon" type="image/png" href="../assets/img-praia-grande.png" />
+  <link rel="stylesheet" href="../css/style-santos-locais-turisticos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
@@ -31,7 +31,7 @@
 
       <p id="headline">Sua próxima viagem: </p>
       <h1>Conheça a cidade de Praia Grande - SP</h1>
-      <img id="image-01" src="/assets/praia-grande-sp.jpg" alt="imagem de praia grande tirada do alto por drone">
+      <img id="image-01" src="../assets/praia-grande-sp.jpg" alt="imagem de praia grande tirada do alto por drone">
       <p id="subtitle"> Com 22 km de praias deslumbrantes, Praia Grande é um dos destinos mais atrativos do litoral
         paulista. A cidade encanta com sua beleza natural, 12 praias urbanizadas, ciclovias, quiosques e opções de lazer
         como parques, shoppings, gastronomia, pontos turisticos e trilhas. Oferecendo infraestrutura completa, é ideal
@@ -55,7 +55,7 @@
 
         <!-- Card 1 -->
         <article class="travel-card">
-          <img id="card-image" src="/assets/fortaleza-itaipu-praia-grande.jpeg" alt="Foto do Templo Beomeo-sa"
+          <img id="card-image" src="../assets/fortaleza-itaipu-praia-grande.jpeg" alt="Foto do Templo Beomeo-sa"
             class="travel-image-1" />
           <div class="travel-content">
             <h3 class="travel-title">1. Fortaleza de Itaipu </h3>
@@ -78,7 +78,7 @@
 
         <!-- Card 2 -->
         <article class="travel-card">
-          <img id="card-image" src="/assets/portinho-praia-grande.png" alt="Foto do totem portinho de praia grande"
+          <img id="card-image" src="../assets/portinho-praia-grande.png" alt="Foto do totem portinho de praia grande"
             class="travel-image" />
           <div class="travel-content">
             <h3 class="travel-title">2. Portinho – Parque Municipal Ézio Dall’Acqua</h3>
@@ -101,7 +101,7 @@
 
         <!-- Card 3 -->
         <article class="travel-card">
-          <img id="card-image" src="/assets/estacao-verao-praia-grande.png" alt="Foto do Parque Yongdusan"
+          <img id="card-image" src="../assets/estacao-verao-praia-grande.png" alt="Foto do Parque Yongdusan"
             class="travel-image" />
           <div class="travel-content">
             <h3 class="travel-title">3. Estação Verão no Kartódromo Municipal</h3>
