🐞 Ajuste de url2 | santosqa.com

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home SantosQA</title>
-    <link rel="icon" type="image/png" href="/santos-locais-turisticos/assets/avatar.png" />
-    <link rel="stylesheet" href="/santos-locais-turisticos/css/style-home.css" />
+    <link rel="icon" type="image/png" href="./assets/avatar.png" />
+    <link rel="stylesheet" href="./css/style-home.css" />
   </head>
 
   <body>
@@ -207,7 +207,7 @@
 
           <li>
             <a
-              href="/santos-locais-turisticos/pages/santos-locais-turisticos.html"
+              href="./pages/santos-locais-turisticos.html"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="Praia Grande - SP"
@@ -251,7 +251,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="/santos-locais-turisticos/script/script.js"></script>
+    <script src="./script/script.js"></script>
 
     <script>
       document.addEventListener('DOMContentLoaded', function () {
